# ocamlformat

./: .gitattributes  .gitignore  .ocamlformat  .travis.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  HACKING.jst.md  HACKING.md  HACKING.org  LICENSE.md  Makefile  Ocamlformat  README.md  RELEASE.md  ROADMAP.md  TODO.md  diff-std-ext.patch  dune  dune-project  dune-workspace.in  format.ml.patch  format.mli.patch  format_.ml  format_.mli  jbuild  jbuild-workspace.in  loge  no-deps-dune-project  ocamlformat-0_26_1.opam  ocamlformat-0_26_1.opam.locked  ocamlformat-26-1.opam  ocamlformat-api.opam  ocamlformat-base.opam  ocamlformat-bench.opam  ocamlformat-dev.opam  ocamlformat-devversion.opam  ocamlformat-format.opam  ocamlformat-help.txt  ocamlformat-lib-dev.opam  (+22 more)
bench/: bench.ml  dune
bench/test/: .ocamlformat-ignore  dune  source.ml
doc/: api.mld  configuration.mld  doc_comments.mld  dune  editor_setup.mld  faq.mld  getting_started.mld  howtos.mld  index.mld  manpage_ocamlformat.mld  manpage_ocamlformat_rpc.mld  rpc.mld
duniverse/alcotest/: .ocamlformat  CHANGES.md  README.md  alcotest-async.opam  alcotest-help.txt  alcotest-js.opam  alcotest-lwt.opam  alcotest-mirage.opam  alcotest.opam  dune  dune-project
duniverse/alcotest/examples/: dune  floats.ml  simple.ml
duniverse/cmdliner/: .gitignore  B0.ml  CHANGES.md  Makefile  README.md  cmdliner.opam  dune  dune-project
duniverse/cmdliner/doc/: examples.mld  index.mld  tool_man.mld  tutorial.mld
duniverse/cmdliner/pkg/: META
duniverse/cmdliner/src/: cmdliner.mli  cmdliner.mllib  cmdliner_info.mli  cmdliner_manpage.ml  dune
duniverse/cmdliner/test/: chorus.ml  cp_ex.ml  darcs_ex.ml  rm_ex.ml  tail_ex.ml  test_man.ml  test_nest.ml
duniverse/either/: .gitignore  .ocamlformat  CHANGES.md  LICENSE  README.md  dune-project  either.opam
duniverse/either/src/: dune  either-as-alias.ml  either-as-newtype.ml  either_intf.ml  which.ml
duniverse/lib-findlib/: .gitignore  CHANGES.md  INSTALL  Makefile  Makefile.config.pattern  configure  dune-project  findlib.files  findlib.opam  ocamlfind.opam
duniverse/lib-findlib/doc/: Makefile  QUICKSTART.xml  README.xml
duniverse/lib-findlib/mini/: README  ocamlfind-mini
duniverse/ocaml-version/: CHANGES.md  dune  dune-project  ocaml-version.opam  ocaml_version.ml  ocaml_version.mli
duniverse/ocaml-version/test/: test_unit.ml
duniverse/uucp/: .gitignore  B0.ml  BRZO  CHANGES.md  DEVEL.md  LICENSE.md  README.md  TODO.md  _tags  dune-project  uucp.opam
duniverse/uucp/doc/: api.odocl  index.mld  unicode.mld
duniverse/uucp/pkg/: META  build_support.ml  pkg.ml
duniverse/uuseg/: .gitignore  B0.ml  BRZO  CHANGES.md  DEVEL.md  LICENSE.md  README.md  _tags  dune-project  uuseg.opam
emacs/: dune  jbuild  ocamlformat.el
lib/: Assoc.ml  Assoc.mli  Ast.ml  Ast.mli  Ast_passes.ml  Ast_passes.mli  Chunk.ml  Chunk.mli  Cmt.ml  Cmt.mli  Cmt_lexer.ml  Cmt_lexer.mli  Cmts.ml  Cmts.mli  Conf.ml  Conf.mli  Conf_decl.ml  Conf_decl.mli  Conf_t.ml  Conf_t.mli  Config_option.ml  Config_option.mli  Docstring.ml  Docstring.mli  Eol_compat.ml  Eol_compat.mli  Exposed.ml  Exposed.mli  Extended_ast.ml  Extended_ast.mli  File_system.ml  File_system.mli  Fmt.ml  Fmt.mli  Fmt_ast.ml  Fmt_ast.mli  Fmt_mly.ml  Fmt_mly.mli  Fmt_odoc.ml  Fmt_odoc.mli  (+69 more)
lib-kernel/: dune  (+18 more)
lib-rpc/lib-protocol/: dune
lib/api/: Conf.ml  Conf.mli  Fmt_ast.ml  Fmt_ast.mli  Literal_lexer.mli  Source.ml  Translation_unit.ml  Translation_unit.mli  dune
lib/base/: Import.ml  dune
lib/bin_conf/: Bin_conf.ml  Bin_conf.mli  Bin_conf_.ml  Bin_conf_26_1.ml  Bin_conf_dev.ml  File_system.ml  File_system.mli  dune
lib/common/: Translation_unit_error.ml  Translation_unit_error.mli  Version.ml  Version.mli  dune
lib/compat/: ge_408.ml  lt_408.ml
lib/conf/: Conf.ml  Conf.mli  dune
lib/erase_jane_syntax/: dune  erase_jane_syntax.ml  erase_jane_syntax.mli
lib/import/: Import.ml  Import.mli  dune
lib/latest/: Ast.ml  Ast.mli  Chunk.ml  Chunk.mli  Cmt.ml  Cmts.mli  Eol_compat.mli  Exposed.ml  Fmt.mli  Fmt_ast.ml  Fmt_odoc.ml  Fmt_odoc.mli  Indent.mli  Loc_tree.mli  Normalize_extended_ast.ml  Ocamlformat_lib.ml  Ocamlformat_lib_latest.ml  Params.mli  Source.ml  Source.mli  Std_ast.ml  Std_ast.mli  Sugar.ml  Sugar.mli  Toplevel_lexer.mli  Toplevel_lexer.mll  Translation_unit.ml  Translation_unit.mli  dune
lib/ocamlformat/: Ocamlformat_lib.ml  Ocamlformat_lib.mli  VConf.ml  VConf.mli  dune  ocamlformat_lib.ml  ocamlformat_version.ml  versionned_conf.ml  versionned_conf.mli
src/: .ocamlformat-ignore  Ast.ml  Ast.mli  Box.ml  Box.mli  Cli.ml  Cli.mli  Cmt.ml  Cmt.mli  Cmts.ml  Cmts.mli  Conf.ml  Conf.mli  Conf496ff8.ml  Conf56cfe8.ml  Conf7c434d.ml  Confcdd6f0.ml  Config_option.ml  Config_option.mli  Fmt.ml  Fmt.mli  Fmt_ast.ml  Fmt_ast.mli  Fmt_odoc.ml  Fmt_odoc.mli  Format_.ml  Format_.mli  Literal_lexer.mli  Literal_lexer.mll  Migrate_ast.ml  Normalize.ml  Normalize.mli  Params.ml  Params.mli  Parse_with_comments.ml  Parse_with_comments.mli  Reason.ml  Reason.mli  Source.ml  Source.mli  (+17 more)
src/compat/: ge_408.ml  lt_408.ml
src/format/: format.ml.patch  format.mli.patch  jbuild
src/import/: Import.ml  Import.mli  dune  jbuild
test/cli/: .ocamlformat  bad_kind.t  check.t  check_formatted.t  check_not_formatted.t  conf.t  conf_bad_version.expected  conf_bad_version.t  conf_malformed1.expected  conf_malformed1.t  conf_unknown_option.expected  conf_unknown_option.t  conf_unknown_value.expected  conf_unknown_value.t  debug.expected  debug.t  deprecated_option.t  dune  dune-project  dune.inc  env.t  env_unknown_option.expected  env_unknown_option.t  env_unknown_value.expected  env_unknown_value.t  err_default_several_file.opts  err_default_several_file.ref  err_default_several_file.t  err_inplace_and_check.opts  err_inplace_and_check.ref  err_inplace_and_check.t  err_inplace_and_output.expected  err_inplace_and_output.opts  err_inplace_and_output.t  err_no_arg.ref  err_no_arg.t  err_output_and_check.opts  err_output_and_check.ref  err_output_and_check.t  err_output_several_files.opts  (+55 more)
test/disabled/: dune
vendored-lib/: dune
(+3577 files in other folders)
