;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;                                                                        ;
;                              OCamlFormat                               ;
;                                                                        ;
;            Copyright (c) Facebook, Inc. and its affiliates.            ;
;                                                                        ;
;      This source code is licensed under the MIT license found in       ;
;      the LICENSE file in the root directory of this source tree.       ;
;                                                                        ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(env
 (release
  (flags
   (:standard -noassert))))

(rule
 (action
  (with-stdout-to
   ocamlformat-help.actual
   (run %{bin:ocamlformat} --help=plain)))
 (package ocamlformat))

(rule
 (alias runtest)
 (package ocamlformat)
 (action
  (diff ocamlformat-help.txt ocamlformat-help.actual)))

(rule
 (action
  (with-stdout-to
   ocamlformat-rpc-help.actual
   (run %{bin:ocamlformat-rpc} --help=plain)))
 (package ocamlformat-rpc))

(rule
 (alias runtest)
 (package ocamlformat-rpc)
 (action
  (diff ocamlformat-rpc-help.txt ocamlformat-rpc-help.actual)))

(data_only_dirs test-extra)
