version: "0.9.1"
######################################################################
#                                                                    #
#                            OCamlFormat                             #
#                                                                    #
#  Copyright (c) 2019-present, Facebook, Inc.  All rights reserved.  #
#                                                                    #
#  This source code is licensed under the MIT license found in the   #
#  LICENSE file in the root directory of this source tree.           #
#                                                                    #
######################################################################

opam-version: "2.0"
maintainer: "OCamlFormat Team <ocamlformat-team@fb.com>"
authors: "Guillaume Petiot <guillaume@tarides.com>"
homepage: "https://github.com/ocaml-ppx/ocamlformat"
bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
dev-repo: "git+https://github.com/ocaml-ppx/ocamlformat.git"
url { archive: "https://github.com/ocaml-ppx/ocamlformat/archive/0.9.tar.gz" }
license: "MIT"
build: [
  ["dune" "build" "-p" "tools/ocamlformat-diff/ocamlformat_diff.exe" "-j" jobs]
]
depends: [
  "bos"
  "cmdliner"
  "dune" {build & >= "1.1.1"}
  "ocamlformat"
]
synopsis: "OCamlFormat diff tool"
description: "OCamlFormat-Diff is a tool that uses OCamlFormat to apply the same formatting to compared OCaml files, so that the formatting differences between the two files are not displayed."
