######################################################################
#                                                                    #
#                            OCamlFormat                             #
#                                                                    #
#  Copyright (c) 2017-present, Facebook, Inc.  All rights reserved.  #
#                                                                    #
#  This source code is licensed under the MIT license found in the   #
#  LICENSE file in the root directory of this source tree.           #
#                                                                    #
######################################################################

opam-version: "1.2"
maintainer: "OCamlFormat Team <ocamlformat-team@fb.com>"
authors: "Josh Berdine <jjb@fb.com>"
homepage: "https://github.com/ocaml-ppx/ocamlformat"
bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
dev-repo: "https://github.com/ocaml-ppx/ocamlformat.git"
license: "MIT"
build: [
  ["tools/gen_version.sh" "src/Version.ml" version] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base" {>= "v0.11.0"}
  "base-unix"
  "bos"
  "cmdliner"
  "dune" {build}
  "fpath"
  "ocaml-migrate-parsetree" {>= "1.0.6"}
  "octavius"
  "patdiff"
  "reason" {= "1.13.4"}
  "stdio"
  "lwt" {< "3.1.0"} (* ocamlformat does not need lwt, but reason requires utop requires lwt, so exclude 3.1.0 since it does not build *)
]
available: [ ocaml-version >= "4.04.1" & ocaml-version < "4.05" ]
