######################################################################
#                                                                    #
#                            OCamlFormat                             #
#                                                                    #
#  Copyright (c) 2017-present, Facebook, Inc.  All rights reserved.  #
#                                                                    #
#  This source code is licensed under the MIT license found in the   #
#  LICENSE file in the root directory of this source tree.           #
#                                                                    #
######################################################################

opam-version: "1.2"
maintainer: "OCamlFormat Team <ocamlformat-team@fb.com>"
authors: "Josh Berdine <jjb@fb.com>"
homepage: "https://github.com/ocaml-ppx/ocamlformat"
bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
dev-repo: "https://github.com/ocaml-ppx/ocamlformat.git"
license: "MIT"
build: [
  ["ocaml" "tools/gen_version.mlt" "src/Version.ml" version] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "base" {>= "v0.11.0"}
  "base-unix"
  "cmdliner"
  "dune" {build & >= "1.1.1"}
  "fpath"
  "ocaml-migrate-parsetree" {>= "1.0.10"}
  "octavius" {>= "1.2.0"}
  "stdio"
  "uutf"
  "reason" {>= "3.2.0"}
]

available: [ ocaml-version >= "4.04.1" & ocaml-version < "4.05" ]
