######################################################################
#                                                                    #
#                            OCamlFormat                             #
#                                                                    #
#  Copyright (c) 2017-present, Facebook, Inc.  All rights reserved.  #
#                                                                    #
#  This source code is licensed under the MIT license found in the   #
#  LICENSE file in the root directory of this source tree.           #
#                                                                    #
######################################################################

opam-version: "2.0"
maintainer: "OCamlFormat Team <ocamlformat-team@fb.com>"
authors: "Josh Berdine <jjb@fb.com>"
license: "MIT"
homepage: "https://github.com/ocaml-ppx/ocamlformat"
bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
depends: [
  "ocaml" {>= "4.06"}
  "base" {>= "v0.11.0"}
  "base-unix"
  "cmdliner"
  "dune" {>= "1.11.1"}
  "fpath"
  "ocaml-migrate-parsetree" {>= "1.0.10"}
  "odoc" {>= "1.4.2"}
  "re"
  "stdio"
  "uutf"
  "reason" {>= "3.2.0"}
]
build: [
  ["ocaml" "tools/gen_version.mlt" "lib/Version.ml" version] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml-ppx/ocamlformat.git"
synopsis: "Auto-formatter for ReasonML code"
description: "ocamlformat_reason is a tool to automatically format ReasonML code in a uniform style."
