opam-version: "1.2"
maintainer: "OCamlFormat Team <ocamlformat-team@fb.com>"
authors: "Pierre Weis"
homepage: "https://github.com/ocaml-ppx/ocamlformat/tree/support"
bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
license: "LGPL-2 with OCaml linking exception"
dev-repo: "https://github.com/ocaml-ppx/ocamlformat.git#support"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build & >= "1.0+beta7"}
]
available: [ocaml-version >= "4.04.0"]
version: "0.4"
