;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;                                                                        ;
;                              OCamlFormat                               ;
;                                                                        ;
;            Copyright (c) Facebook, Inc. and its affiliates.            ;
;                                                                        ;
;      This source code is licensed under the MIT license found in       ;
;      the LICENSE file in the root directory of this source tree.       ;
;                                                                        ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(executable
 (name bench)
 (public_name bench)
 (package ocamlformat-bench)
 (libraries bechamel bechamel-js ocamlformat_lib stdio yojson))

(rule
 (alias runbench)
 (package ocamlformat-bench)
 (deps
  (source_tree test)
  %{bin:bench})
 (action
  (run %{bin:bench})))
