(documentation
 (package ocamlformat))

(rule
 (action
  (with-stdout-to
   manpage_ocamlformat.mld.gen
   (run ../tools/gen_manpage/gen_manpage.exe %{bin:ocamlformat} --help=plain))))

(rule
 (alias gen_manpage)
 (package ocamlformat)
 (action
  (diff manpage_ocamlformat.mld manpage_ocamlformat.mld.gen)))

(rule
 (action
  (with-stdout-to
   manpage_ocamlformat_rpc.mld.gen
   (run
    ../tools/gen_manpage/gen_manpage.exe
    %{bin:ocamlformat-rpc}
    --help=plain))))

(rule
 (alias gen_manpage)
 (package ocamlformat)
 (action
  (diff manpage_ocamlformat_rpc.mld manpage_ocamlformat_rpc.mld.gen)))
