;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;                                                                    ;
;                            OCamlFormat                             ;
;                                                                    ;
;  Copyright (c) 2017-present, Facebook, Inc.  All rights reserved.  ;
;                                                                    ;
;  This source code is licensed under the MIT license found in the   ;
;  LICENSE file in the root directory of this source tree.           ;
;                                                                    ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(install
 (package ocamlformat)  
 (section share_root)
 (files (ocamlformat.el as emacs/site-lisp/ocamlformat.el)))
