;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;                                                                        ;
;                              OCamlFormat                               ;
;                                                                        ;
;            Copyright (c) Facebook, Inc. and its affiliates.            ;
;                                                                        ;
;      This source code is licensed under the MIT license found in       ;
;      the LICENSE file in the root directory of this source tree.       ;
;                                                                        ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(ocamllex Literal_lexer)

(ocamllex Toplevel_lexer)

(rule
 (action
  (write-file
   current_version.ml
   ; enable release renaming
   "let v = \"multi_version_alpha1\""
   ; disable release renaming
   )))

(rule
 (action
  (write-file
   ocamlformat_parser_extended.ml
   ; enable release renaming
   "include Ocamlformat_parser_extended_multi_version_alpha1"
   ; disable release renaming
   )))

(rule
 (action
  (write-file
   ocamlformat_odoc_parser.ml
   ; enable release renaming
   "include Ocamlformat_odoc_parser_multi_version_alpha1"
   ; disable release renaming
   )))

(rule
 (action
  (write-file
   ocamlformat_parser_standard.ml
   ; enable release renaming
   "include Ocamlformat_parser_standard_multi_version_alpha1"
   ; disable release renaming
   )))

(library
 (name
  ; enable release renaming
  ocamlformat_lib_multi_version_alpha1
  ; disable release renaming
  )
 (public_name
  ; enable release renaming
  ocamlformat-lib-multi_version_alpha1
  ; disable release renaming
  )
 (flags
  (:standard
   ; enable release renaming
   -open
   Ocamlformat_ocaml_common_multi_version_alpha1
   -open
   Ocamlformat_parser_extended_multi_version_alpha1
   -open
   Ocamlformat_stdlib_multi_version_alpha1
   -open
   Ocamlformat_format_multi_version_alpha1
   ; disable release renaming
   ))
 (instrumentation
  (backend bisect_ppx))
 (libraries
  dune-build-info
  ocaml-version
  ; enable release renaming
  ocamlformat_format_multi_version_alpha1
  ocamlformat_ocaml_common_multi_version_alpha1
  ocamlformat_odoc_parser_multi_version_alpha1
  ocamlformat_parser_extended_multi_version_alpha1
  ocamlformat_parser_standard_multi_version_alpha1
  ocamlformat_stdlib_multi_version_alpha1
  ; disable release renaming
  ocp-indent.lib
  uuseg.string))
