(* -*- tuareg -*- *)

let preprocess =
  match Jbuild_plugin.V1.context with
  | "coverage" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""

;;
Jbuild_plugin.V1.send
@@ Format.sprintf
     {|
(ocamllex Literal_lexer)

(executables
 (names ocamlformat ocamlformat_reason)
 (flags (:standard -open Import))
 %s
 (libraries cmdliner format_ fpath import ocaml-migrate-parsetree octavius unix uutf))

(rule
 (targets ocamlformat.1)
 (deps ocamlformat.exe)
 (action (with-stdout-to %%{targets} (run ./ocamlformat.exe --help=groff))))

(install
 (section bin)
 (files (ocamlformat.exe as ocamlformat))
 (package ocamlformat))

(install
 (section bin)
 (files (ocamlformat_reason.exe as ocamlformat_reason))
 (package ocamlformat_reason))

(install
 (section man)
 (files ocamlformat.1)
 (package ocamlformat))
|}
     preprocess
