(* -*- tuareg -*- *)

let preprocess =
  match Jbuild_plugin.V1.context with
  | "coverage" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""

;;
Jbuild_plugin.V1.send
@@ Format.sprintf
     {|
(rule
 (targets Version.ml)
 (deps (universe))
 (action (run ocaml %%{dep:../tools/gen_version.mlt} Version.ml))
 (mode fallback))

(rule
 (copy#
  compat/%%{read:compat-file}
  compat.ml))

(rule
 (targets compat-file)
 (action  (run %%{ocaml} %%{dep:../tools/gen_compat.ml} %%{ocaml_version})))

(ocamllex Literal_lexer)

(executables
 (names ocamlformat ocamlformat_reason)
 (flags (:standard -open Import))
 %s
 (libraries cmdliner format_ fpath import ocaml-migrate-parsetree octavius unix uuseg uuseg.string))

(rule
 (targets ocamlformat.1)
 (deps ocamlformat.exe)
 (action (with-stdout-to %%{targets} (run ./ocamlformat.exe --help=groff))))

(install
 (section bin)
 (files (ocamlformat.exe as ocamlformat))
 (package ocamlformat))

(install
 (section bin)
 (files (ocamlformat_reason.exe as ocamlformat_reason))
 (package ocamlformat_reason))

(install
 (section man)
 (files ocamlformat.1)
 (package ocamlformat))
|}
     preprocess
