(rule
 (targets Version.ml)
 (deps (universe))
 (action (run ocaml %{dep:../tools/gen_version.mlt} Version.ml))
 (mode fallback))

(rule
 (copy#
  compat/%{read:compat-file}
  compat.ml))

(rule
 (targets compat-file)
 (action  (run %{ocaml} %{dep:../tools/gen_compat.ml} %{ocaml_version})))

(ocamllex Literal_lexer)

(executables
 (names ocamlformat ocamlformat_reason)
 (flags (:standard -open Import))
 ;;INSERT_BISECT_HERE;;
 (libraries format_ import ocaml-migrate-parsetree odoc.model odoc.parser re uuseg uuseg.string))

(rule
 (targets ocamlformat.1)
 (deps ocamlformat.exe)
 (action (with-stdout-to %{targets} (run ./ocamlformat.exe --help=groff))))

(install
 (section bin)
 (files (ocamlformat.exe as ocamlformat))
 (package ocamlformat))

(install
 (section bin)
 (files (ocamlformat_reason.exe as ocamlformat_reason))
 (package ocamlformat_reason))

(install
 (section man)
 (files ocamlformat.1)
 (package ocamlformat))
